garde/tests/ui/compile-fail/dive_and_inner.rs
#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(dive, inner(length(min = 1)))]
    field: &'a [&'a str],
}

fn main() {}
